--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,7 +29,6 @@ a {
     align-items: center;
     justify-content: center;
     box-shadow: 2px 5px 5px 2px #e9e8e8;
-    height: 5em;
 }
 
 .innerNav {
@@ -38,7 +37,6 @@ a {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin-right: 15px;
 }
 
 .navTitle {
@@ -99,6 +97,12 @@ a {
     display: flex;
     flex-direction: column;
     width: 23%;
+}
+
+.creationFormNest2 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .creationForm {
@@ -336,11 +340,41 @@ label {
     text-align: center;
 }
 
+.askCreation {
+    font-family: 'Poppins', sans-serif;
+    padding-top: 20px;
+}
 
-@media only screen and (max-width: 1000px) {
+.innerWorkouts {
+    width: 100%;
+    margin-right: 20px;
+}
+
+.displayFormBtn {
+    font-family: 'Poppins', sans-serif;
+    margin-top: 20px;
+}
+
+.displayFormBtnDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media only screen and (max-width: 1250px) {
     .innerHomepage {
         flex-direction: column-reverse;
         align-items: center;
+    }
+
+    .workoutContainers {
+        width: 100%;
+        max-width: 97%;
+    }
+
+    .innerWorkouts {
+        width: 100%;
+        margin-right: 0px;
     }
 
     .workouts {
@@ -354,21 +388,23 @@ label {
     .innerHomepage {
         width: 75%;
     }
-}
 
-@media only screen and (max-width: 750px) {
+    .creationFormNest {
+        display: none;
+    }
+
     .innerNav {
         justify-content: center;
         flex-direction: column;
+        margin: 0%;
     }
 
-    .navHomeLink {
-        border-bottom: 2px solid rgb(56, 56, 56);
+    .loggedinDiv {
+        margin-top: 10px;
+        margin-bottom: 10px;
+
     }
 
-    .navBar {
-        height: 9em;
-    }
 
     .signupPage {
         height: calc(100vh - 10em);
@@ -377,4 +413,25 @@ label {
     .loginPage {
         height: calc(100vh - 10em);
     }
+
+    .homepage {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+
+}
+
+/* @media only screen and (max-width: 950px) {} */
+
+@media only screen and (max-width: 700px) {
+    .creationForm {
+        width: 100%;
+    }
+
+    .creationFormNest {
+        width: 65%;
+    }
+
 }
